--- a/src/app/ideation/components/add-idea-folder/add-idea-folder.component.html
+++ b/src/app/ideation/components/add-idea-folder/add-idea-folder.component.html
@@ -9,10 +9,12 @@
     </div>
     <div class="dialog_header ideation">
       <div class="header_text">
-        <div class="title" translate="COMPONENTS.ADD_IDEA_FOLDER.HEADING"><div class="tooltip" tooltip>
-          <div class="content_title">Help on its way</div>
-          <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-        </div></div>
+        <div class="title" translate="COMPONENTS.ADD_IDEA_FOLDER.HEADING">
+          <div class="tooltip" tooltip>
+            <div class="content_title">Help on its way</div>
+            <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
+          </div>
+        </div>
         <div class="dialog_close">
           <a class="btn_dialog_close icon" dialog-close>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -42,32 +44,59 @@
             </div>
           </div>
           <ng-container *ngIf="folders$ | async as folders">
-            <div class="bold" translate="COMPONENTS.ADD_IDEA_FOLDER.LBL_FOLDER_SELECTION"></div>
-            <div class="idea_selection_wrap">
-              <div class="idea_selection_header">
-                <div class="checkbox_wrap" (click)="toggleAllFolders(folders)">
-                  <label class="checkbox" [ngClass]="{selected:allChecked()}">
-                    <span class="checkmark"></span>
-                  </label>
-                  <div translate="COMPONENTS.ADD_IDEA_FOLDER.LBL_FOLDERS" [translateParams]="{count: foldersCount}">
-                  </div>
-                </div>
-              </div>
-              <div class="line_separator"></div>
-              <div class="ideas_wrap">
-                <div class="idea_row" *ngFor="let folder of folders">
-                  <div class="checkbox_wrap" (click)="toggleFolder(folder, $event);">
-                    <label class="checkbox" [ngClass]="{selected:folderSelected(folder)}">
+            <div class="folder_list_wrap">
+              <div class="bold" translate="COMPONENTS.ADD_IDEA_FOLDER.LBL_FOLDER_SELECTION"></div>
+              <div class="idea_selection_wrap">
+                <div class="idea_selection_header">
+                  <div class="checkbox_wrap" (click)="toggleAllFolders(folders)">
+                    <label class="checkbox" [ngClass]="{selected:allChecked()}">
                       <span class="checkmark"></span>
                     </label>
-                    <div class="name_wrap">
-                      <div class="icon"></div>
-                      <span class="folder_name" [innerHTML]="folder.name"></span>
+                    <div translate="COMPONENTS.ADD_IDEA_FOLDER.LBL_FOLDERS" [translateParams]="{count: foldersCount}">
+                    </div>
+                  </div>
+                </div>
+                <div class="line_separator"></div>
+                <div class="ideas_wrap">
+                  <div class="idea_row" *ngFor="let folder of folders">
+                    <div class="checkbox_wrap" (click)="toggleFolder(folder, $event);">
+                      <label class="checkbox" [ngClass]="{selected:folderSelected(folder)}">
+                        <span class="checkmark"></span>
+                      </label>
+                      <div class="name_wrap">
+                        <div class="icon"></div>
+                        <span class="folder_name" [innerHTML]="folder.name"></span>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+            <form [formGroup]="form">
+              <div class="checkbox_wrap" (click)="showFolderInput = !showFolderInput">
+                <label class="checkbox" [ngClass]="{selected:showFolderInput}">
+                  <span class="checkmark"></span>
+                </label>
+                <div class="bold" translate="COMPONENTS.ADD_IDEA_FOLDER.LBL_ADD_TO_A_NEW_FOLDER">
+                </div>
+              </div>
+              <cos-input *ngIf="showFolderInput" placeholder="{{'COMPONENTS.ADD_IDEA_FOLDER.PLACEHOLDER_FOLDER_NAME' | translate}}">
+                <input id="name" formControlName="name" type="name"
+                  placeholder="{{'COMPONENTS.ADD_IDEA_FOLDER.PLACEHOLDER_FOLDER_NAME' | translate}}"
+                  (focus)="wWidth > 1024"
+                  [ngClass]="{'error_input': form.controls['name'].touched && form.controls['name'].invalid}"
+                  [maxlength]="254">
+                <label for="name" class="error_label"
+                  *ngIf="form.controls['name'].touched && form.controls['name'].invalid">
+                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M8.89438 1.78863C8.52586 1.05158 7.47405 1.05158 7.10553 1.78863L0.723562 14.5526C0.391112 15.2175 0.874608 15.9998 1.61799 15.9998H14.3819C15.1253 15.9998 15.6088 15.2175 15.2763 14.5526L8.89438 1.78863ZM6.99996 6.99977C6.99996 6.44749 7.44767 5.99977 7.99996 5.99977C8.55224 5.99977 8.99996 6.44749 8.99996 6.99977V9.99977C8.99996 10.5521 8.55224 10.9998 7.99996 10.9998C7.44767 10.9998 6.99996 10.5521 6.99996 9.99977V6.99977ZM6.99996 12.9998C6.99996 12.4475 7.44767 11.9998 7.99996 11.9998C8.55224 11.9998 8.99996 12.4475 8.99996 12.9998C8.99996 13.5521 8.55224 13.9998 7.99996 13.9998C7.44767 13.9998 6.99996 13.5521 6.99996 12.9998Z"
+                      fill="#EF4025" />
+                  </svg>
+                  <span translate="COMPONENTS.ADD_IDEA_FOLDER.ERROR_FOLDER_NAME"></span>
+                </label>
+              </cos-input>
+            </form>
           </ng-container>
         </div>
       </div>
@@ -75,7 +104,8 @@
 
     <div class="dialog_footer with_buttons">
       <a translate="COMPONENTS.ADD_IDEA_FOLDER.LNK_CANCEL" dialog-close></a>
-      <button class="btn_big_submit" (click)="createFolder()" [disabled]="!this.ideaFolders.length"
+      <button class="btn_big_submit" (click)="createFolder()"
+        [disabled]="!this.ideaFolders.length  && this.form.invalid"
         translate="COMPONENTS.ADD_IDEA_FOLDER.BTN_ADD"></button>
     </div>
   </div>
