--- a/src/app/ideation/components/add-idea-folder/add-idea-folder.component.scss
+++ b/src/app/ideation/components/add-idea-folder/add-idea-folder.component.scss
@@ -1,3 +1,12 @@
+.section_content_wrap {
+  gap: 32px;
+
+  .folder_list_wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+}
 .idea_selection_wrap {
   display: flex;
   flex-direction: column;
@@ -59,6 +68,19 @@
   }
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  .checkbox_wrap {
+    flex-direction: row;
+    display: flex;
+    gap: 16px;
+    align-items: center;
+  }
+}
+
 .idea_info_wrap {
   display: flex;
   flex-direction: column;
@@ -66,7 +88,6 @@
   width: 100%;
   padding: 16px;
   background-color: var(--color-argument-info-light);
-  margin-bottom: 16px;
   border-radius: 8px;
   .idea_wrap {
     display: flex;
