--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -417,7 +417,7 @@
             </div>
             <div *ngIf="topic.intro && !tabTablet" class="topic_intro" [innerHTML]="topic.intro"></div>
             <div class="topic_content" [innerHTML]="topic.description" *ngIf="!tabTablet"></div>
-            <div class="button_wrap" *ngIf="readMoreButton && !tabTablet">
+            <div class="button_wrap" *ngIf="readMoreButton && !tabTablet" [ngClass]="{open: readMore}">
               <button class="btn_medium_secondary" #readMoreButton (click)="toggleReadMore()">
                 <svg *ngIf="!readMore" width="24" height="24" viewBox="0 0 24 24" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
