--- a/src/app/voting/components/vote-create/vote-create.component.html
+++ b/src/app/voting/components/vote-create/vote-create.component.html
@@ -837,7 +837,7 @@
                 </div>
                 <div class="topic_content" [innerHTML]="topic.description">
                 </div>
-                <div class="button_wrap" *ngIf="readMoreButton">
+                <div class="button_wrap" *ngIf="readMoreButton" [ngClass]="{open: readMore}">
                   <button class="btn_medium_secondary" (click)="readMore=!readMore">
                     <svg *ngIf="!readMore" width="24" height="24" viewBox="0 0 24 24" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
