--- a/src/styles.scss
+++ b/src/styles.scss
@@ -618,35 +618,156 @@ html {
   }
 }
 
-.topic_content {
-  padding: 8px 32px;
-  overflow: hidden;
+.topic_content_wrap {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-radius: 16px;
+  background-color: var(--color-surfaces);
   position: relative;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 32px;
 
-  strong,
-  b,
-  i,
-  em,
-  s,
-  u,
-  ul,
-  ol,
-  li {
+  @include mixins.tablet {
+    border-radius: 0 0 16px 16px;
+  }
+
+  .info_bar {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    padding: 16px;
+    background-color: var(--color-warn-background);
+    position: relative;
+    top: 0;
+    width: 100%;
+  }
+
+  .moderated_topic {
+    background: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(16px);
+  }
+  .topic_image {
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    display: flex;
+    min-height: 60px;
+    max-height: 324px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    img {
+      width: 100%;
+      object-fit: cover;
+      aspect-ratio: 1;
+    }
+
+    .permissions_lable {
+      position: absolute;
+      bottom: 16px;
+      left: 16px;
+
+      @include mixins.mobile {
+        bottom: 8px;
+      }
+    }
+  }
+
+  #topic_text_wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding:32px;
+    position: relative;
+  }
+
+  .topic_title {
+    display: flex;
+    &.tablet_tab_open {
+      padding: 16px;
+    }
+    @include mixins.mobile {
+      padding: 16px;
+    }
+  }
+  .topic_intro {
+    display: flex;
+    padding: 8px 0;
     font-size: 16px;
-    line-height: 32px; /* 200% */
-  }
-  ul,
-  ol,
-  li {
     font-style: normal;
+    font-weight: 600;
+    line-height: 26px; /* 162.5% */
+    @include mixins.mobile {
+      padding: 8px 16px;
+    }
+  }
+  .topic_content {
+    overflow: hidden;
+    position: relative;
     font-weight: 400;
+    font-size: 16px;
+    line-height: 32px;
+    strong,
+    li,
+    b,
+    i,
+    em,
+    s,
+    u {
+      font-size: 16px;
+      line-height: 32px;
+    }
+    ul,
+    ol,
+    li {
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 32px; /* 200% */
+    }
+    @include mixins.mobile {
+      padding: 8px 16px;
+    }
   }
 
-  img {
-    max-width: 100%;
+  .button_wrap {
+    position: absolute;
+    bottom: 47px;
+    left: 0;
+    padding: 0px 32px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    z-index: 3;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.90) 100%);
+    height: 144px;
+
+    &.open {
+      height: max-content;
+      bottom: 0;
+      position: relative;
+      padding: 0;
+
+      button {
+        position: relative;
+        bottom: 0;
+        width: 100%;
+      }
+    }
+    button {
+      position: absolute;
+      bottom: 16px;
+      width: calc(100% - 64px);
+      box-shadow: 0px 8px 20px 0px rgba(220, 231, 240, 0.30);
+      path {
+        fill: none;
+      }
+      &:hover {
+        path {
+          stroke: var(--color-surfaces);
+        }
+      }
+    }
   }
 }
 
